--- a/Informatic/labs/5_lab/mario/Dockerfile
+++ b/Informatic/labs/5_lab/mario/Dockerfile
@@ -6,6 +6,7 @@ RUN apt-get update && apt-get install -y \
     apt-utils \
     mesa-utils \
     nano \
+    unzip\
     && rm -rf /var/lib/apt/lists/*
         
 RUN mkdir -p /var/lib/apt/lists/partial && apt-get update && apt-get install -y build-essential libsdl-dev \
@@ -22,3 +23,4 @@ COPY ./MegaMario_v1.7_full.zip /MegaMario_v1.7_full.zip
 RUN unzip MegaMario_v1.7_full.zip -d MegaMario_v1.7_full
 
 RUN cd MegaMario_v1.7_full && make PREFIX=/usr && make PREFIX=/usr install
+
